--- a/src/pyload/webui/app/themes/pyplex/templates/base.html
+++ b/src/pyload/webui/app/themes/pyplex/templates/base.html
@@ -31,7 +31,7 @@
 }
 </style>
 
-<title>{% block title %}pyLoad{% endblock %}</title>
+<title>{% block title %}NDLoad{% endblock %}</title>
 
 {% block head %}
 {% endblock %}
