--- a/src/pyload/webui/app/themes/pyplex/templates/dashboard.html
+++ b/src/pyload/webui/app/themes/pyplex/templates/dashboard.html
@@ -11,22 +11,22 @@
 {% block pageactions %}
 {% endblock %}
 
-{% block title %}pyLoad - {{_('Dashboard')}}{% endblock %}
+{% block title %}NDLoad - {{_('Dashboard')}}{% endblock %}
 {#{% block subtitle %}{{_('Dashboard')}}{% endblock %}#}
 
 {% block content %}
 <table class="table" style="width:98%;">
     <thead>
-  <tr class="header">
-    <th class="hidden-xs">{{_('Status')}}</th>
-    <th>{{_('Name')}}</th>
-    <th class="hidden-xs">{{_("Hoster")}}</th>
-    <th>{{_('Info')}}</th>
-    <th class="hidden-xs">{{_('Size')}}</th>
-    <th class="hidden-xs">{{_('Progress')}}</th>
-  </tr>
+        <tr class="header">
+            <th class="hidden-xs">{{_('Status')}}</th>
+            <th>{{_('Name')}}</th>
+            <th class="hidden-xs">{{_("Hoster")}}</th>
+            <!-- Thẻ th cho cột Info đã bị xóa -->
+            <th class="hidden-xs">{{_('Size')}}</th>
+            <th class="hidden-xs">{{_('Progress')}}</th>
+        </tr>
     </thead>
-  <tbody id="links_active">
-  </tbody>
+    <tbody id="links_active">
+    </tbody>
 </table>
 {% endblock %}
