--- a/src/pyload/webui/app/themes/pyplex/templates/files.html
+++ b/src/pyload/webui/app/themes/pyplex/templates/files.html
@@ -1,6 +1,6 @@
 {% extends theme('base.html') %}
 
-{% block title %}pyLoad - {{_('Files')}}{% endblock %}
+{% block title %}NDLoad - {{_('Files')}}{% endblock %}
 
 {% block content %}
 
