--- a/src/pyload/webui/app/themes/pyplex/templates/packages.html
+++ b/src/pyload/webui/app/themes/pyplex/templates/packages.html
@@ -24,7 +24,7 @@
   </div>
 {% endblock %}
 
-{% block title %}pyLoad - {{name}}{% endblock %} -->
+{% block title %}NDLoad - {{name}}{% endblock %} -->
 {#{% block subtitle %}{{name}}{% endblock %}#}
 
 {% block content %}
