--- a/src/pyload/webui/app/themes/pyplex/templates/settings.html
+++ b/src/pyload/webui/app/themes/pyplex/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends theme('base.html') %}
 
-{% block title %}pyLoad - {{_('Settings')}}{% endblock %}
+{% block title %}NDLoad - {{_('Settings')}}{% endblock %}
 
 {% block head %}
 <meta id="plugins-list" data-plugin='{{conf.plugin|tojson}}'/>
@@ -14,8 +14,8 @@
 {% block pageactions %}
 {% if user.is_admin %}
   <div class="btn-group btn-group-sm" role="group" aria-label="...">
-    <button id="quit-pyload" class="btn btn-danger" data-toggle="modal" data-target="#quit_box"><span class="glyphicon glyphicon-off"></span> {{_('Quit pyLoad')}}</button>
-    <button id="restart-pyload" class="btn btn-warning" data-toggle="modal" data-target="#restart_box"><span class="glyphicon glyphicon-repeat"></span> {{_('Restart pyLoad')}}</button>
+    <button id="quit-pyload" class="btn btn-danger" data-toggle="modal" data-target="#quit_box"><span class="glyphicon glyphicon-off"></span> {{_('Quit NDLoad')}}</button>
+    <button id="restart-pyload" class="btn btn-warning" data-toggle="modal" data-target="#restart_box"><span class="glyphicon glyphicon-repeat"></span> {{_('Restart NDLoad')}}</button>
   </div>
 {% endif %}
 {% endblock %}
@@ -148,7 +148,7 @@
     <div class="row">
       <div class="col-sm-4 col-sm-offset-3 mt-sm-10" style="margin-top: 10px">
         <div class="alert alert-danger" style="padding:8px;">
-          <p class="align-middle">{{ _("To reset default admin login run:") }} <b>pyload -r</b></p>
+          <p class="align-middle">{{ _("To reset default admin login run:") }} <b>NDload -r</b></p>
           <br style="line-height: 2px;">
           <p class="align-middle"><b>{{_('Important:')}}</b> {{_('Admin user have always all permissions!')}}</p>
         </div>
